// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResultPageHeader /> renders correctly with non-null total results/non-null search 1`] = `
<Tile
  tileClasses="results-header-tile"
>
  <h3>
    <span>
      Articles 
      <small>
        — 155 found
      </small>
    </span>
    <small
      className="result-header-page-number"
    >
      Page 1
    </small>
  </h3>
</Tile>
`;

exports[`<SearchResultPageHeader /> renders correctly with non-null total results/null search 1`] = `
<Tile
  tileClasses="results-header-tile"
>
  <h3>
    <span>
      Articles 
      <div
        className="loading"
        style={
          Object {
            "display": "inline-block",
            "height": "1em",
            "width": "5em",
          }
        }
      />
    </span>
  </h3>
</Tile>
`;

exports[`<SearchResultPageHeader /> renders correctly with null total results/non-null search 1`] = `
<Tile
  tileClasses="results-header-tile"
>
  <h3>
    <span>
      Articles 
      <div
        className="loading"
        style={
          Object {
            "display": "inline-block",
            "height": "1em",
            "width": "5em",
          }
        }
      />
    </span>
  </h3>
</Tile>
`;

exports[`<SearchResultPageHeader /> renders correctly with null total results/null search 1`] = `
<Tile
  tileClasses="results-header-tile"
>
  <h3>
    <span>
      Articles 
      <div
        className="loading"
        style={
          Object {
            "display": "inline-block",
            "height": "1em",
            "width": "5em",
          }
        }
      />
    </span>
  </h3>
</Tile>
`;
